syntax = "proto3";

package test;

option java_multiple_files = true;

import "google/api/annotations.proto";

service MethodRegistryTestService {
  rpc SimpleMethod(SimpleMethodRequest) returns (SimpleMethodResponse) {}

  rpc HttpAnnotationMethod(HttpAnnotationMethodRequest) returns (HttpAnnotationMethodResponse) {
    option (google.api.http) = {
      post: "/v1/test/http_annotation_method"
      body: "*"
    };
  }
}

message SimpleMethodRequest {}

message SimpleMethodResponse {}

message HttpAnnotationMethodRequest {}

message HttpAnnotationMethodResponse {}